--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 08.05.2025 13:34:25 | Praha: 14°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 09.05.2025 09:34:47 | Praha: 9°C, Jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami a vařeným vejcem</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Steak z kuřecích prsou na krémové houbové omáčce, máslové špecle</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, brusinky</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové kostky na paprice, těstoviny vřetena</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené vepřové výpečky, bramborové knedlíky maštěné cibulkou, dušený špenát</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečená vepřová panenka podávaná na hráškovém pyré, grilované rajče se sýrem Gran Moravia, volské oko</td><td class="menuPrice">193,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí roláda plněná anglickou slaninou, vejci a zeleninou, mačkané brambory s cibulkou</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr 45%, americké brambory, tatarka</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Biftek z pravé hovězí svíčkové na smetanové omáčce s barevným drceným pepřem, volské oko, brambory grenaile s plátky česneku</td><td class="menuPrice">227,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát trhaných listů se zeleninou ochucený majonézovým dresinkem, opečená anglická slanina, steak z kuřecích prsou, vařené vejce, strouhaný sýr Gran Moravia</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla </h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené řízky z vepřové panenky, bramborová kaše s máslem, kyselá okurka, citron</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček na červeném víně s grilovanou kořenovou zeleninou, dušená jasmínová rýže</td><td class="menuPrice">182,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Debrecínský vepřový guláš s cibulí a feferonkou, naše bramboráčky</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pomalu pečený vepřový bok ve vlastní šťávě, kynuté houskové knedlíky, dušené bílé zelí</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili s boloňským ragú, strouhaný sýr Gran Moravia</td><td class="menuPrice">158,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Medailonky z kuřecích prsou gratinovaný nivou, celerové hranolky, malý zeleninový salát</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné pepřové omáčce, krokety</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou ochucený americkým dresingem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">164,-</td></tr></tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Teplý linecký jablkový koláč se šlehačkou, karamelem a vanilkovou zmrzlinou</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Teplý linecký jablkový koláč se šlehačkou, karamelem a vanilkovou zmrzlinou</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tankový Budvar 33 - světlý ležák alk. 4,6% - Hořkost (IBU) 33</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Budvar REDIX ALK. 4,0% - Hořkost (IBU) 28</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Budweiser Budvar Original Kroužkový alk.5,0% - Hořkost (IBU) 22</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">62,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Birgo mango-limeta max. alk. 0,3% - čepované nealko</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Citronáda -Poděbradka poctivá - čepované nealko</td><td class="menuPrice">34,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Tankový Budvar 33 - světlý ležák alk. 4,6% - Hořkost (IBU) 33</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Budvar REDIX ALK. 4,0% - Hořkost (IBU) 28</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Budweiser Budvar Original Kroužkový alk.5,0% - Hořkost (IBU) 22</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Albín ALlk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">62,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Birgo mango-limeta max. alk. 0,3% - čepované nealko</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Citronáda -Poděbradka poctivá - čepované nealko</td><td class="menuPrice">34,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">77,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -24,9 +27,7 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
   visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
@@ -39,9 +40,34 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Čtvrtek 8.5.2025 </div>
+<div class="nadpis">Pátek 9.5.2025 </div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Frankfurtská <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Smažený kuřecí řízek, mačkaný brambor, citron <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">185 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>3ks Bramborové knedlíky plněné uzeným masem, červené zelí a cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Hovězí chilli con-carne, rýže <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>2ks Špenátové palačinky plněné žampionovou směsí <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -52,7 +78,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 8.5.2025 </div>
+<div class="nadpis">Pátek 9.5.2025 </div>
 <ul>
 <li class="poznamka">
 <div class="polozka">Zavřeno</div>
