--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 12.05.2025 13:34:24 | Praha: 17°C, Jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 13.05.2025 09:35:33 | Praha: 12°C, Jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Kuřecí vývar s masem, zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květákový krém s vejci</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName"> 150g Smažené řízky z vepřové panenky, bramborový salát, citron</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staročeská bašta (pečený vepřový bůček, uzená kýta a klobása na grilu), bramborové knedlíky maštěné cibulkou, červené a bílé zelí</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené šunkofleky, hanácký salát</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Medailonky z pravé hovězí svíčkové, restované fazolové lusky s anglickou slaninou, sázené vejce, česneková zakysaná smetana</td><td class="menuPrice">199,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné sýrové omáčce s kukuřicí, americké brambory</td><td class="menuPrice">173,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš burger z trhaného vepřového masa v BBQ omáčce, s trhanými listy salátů, tomatem, sýrem a anglickou slaninou, hranolky, tatarka</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti na smetanové omáčce s hříbky, restované špecle</td><td class="menuPrice">222,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou promíchaný olivovým olejem, grilovaný balkánský sýr</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">180g Smažené masové karbanátky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený moravský vrabec, bramborové knedlíky maštěné cibulkou, dušený špenát</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové kostky na slanině, dušená jasmínová rýže</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečená vepřová panenka na hráškovém pyré se strouhaným sýrem Gran Moravia, vařené vejce</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou gratinovaný hermelínem, pečené brambory s anglickou slaninou</td><td class="menuPrice">175,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">150g Steak z vepřové kotlety na smetanové omáčce s barevným pepřem, gratinované brambory</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecím masem, ledovým salátem, zeleninou, česnekovým dipem, strouhaným sýrem a jalapeňos, smažené bramborové hranolky, tatarka</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát z trhaných listů s marinovanou červenou cibulí, kuřecím masem a zastřeným vejcem, strouhaný sýr Gran Moravia</td><td class="menuPrice">162,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tankový Budvar 33 - světlý ležák alk. 4,6% - Hořkost (IBU) 33</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Budvar REDIX ALK. 4,0% - Hořkost (IBU) 28</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Budweiser Budvar Original Kroužkový alk.5,0% - Hořkost (IBU) 22</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon - RED ALE 13°  alk. 5,4% - Hořkost (IBU) 76 - svrchně kvašené pivo</td><td class="menuPrice">62,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Birgo mango-limeta max. alk. 0,3% - čepované nealko</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Citronáda -Poděbradka poctivá - čepované nealko</td><td class="menuPrice">34,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">77,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Teplý linecký jablkový koláč se šlehačkou, karamelem a vanilkovou zmrzlinou</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tankový Budvar 33 - světlý ležák alk. 4,6% - Hořkost (IBU) 33</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Budvar REDIX ALK. 4,0% - Hořkost (IBU) 28</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Budweiser Budvar Original Kroužkový alk.5,0% - Hořkost (IBU) 22</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">62,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Birgo mango-limeta max. alk. 0,3% - čepované nealko</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Citronáda -Poděbradka poctivá - čepované nealko</td><td class="menuPrice">34,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">77,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -27,9 +24,7 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
   visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
@@ -42,31 +37,31 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Pondělí 12.5.2025 </div>
+<div class="nadpis">Úterý 13.5.2025 </div>
 <ul>
 <span class="popup-gallery"><li class="polevka">
-<div class="polozka">Gulášová 1</div>
+<div class="polozka">Domácí bramboračka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
 <div class="cena">45 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>200g Steak z vepřové krkovice, pasáčkovi brambory s česnekovým dipem a zelný salátek. (A3, 7)  <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">195 Kč</div>
+<div class="polozka"><span class="poradi">1. </span>150g Bratislavská vepřová pečeně, HK <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">165 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>350g Halušky s uzeným masem, zelí a cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Kuřecí steak Caprese, steakové hranolky a bazalkový dip <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">2. </span>150g Pikantní kuřecí nudličky se sezamem a rýží Basmati <em title="Obiloviny obsahující lepek">1</em><em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
 <div class="cena">175 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>350g Cuketové risotto se smetanou a parmazánem <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">165 Kč</div>
+<div class="polozka"><span class="poradi">3. </span>200g Krůtí steak s Lázenskou zeleninkou a mačkaný brambory <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em></div>
+<div class="cena">195 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>350g Míchaný zeleninový salát s baby mozzarellou, dip a bagetka <em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">155 Kč</div>
 <div class="clear"></div>
 </li>
 </span> </ul>
@@ -80,26 +75,26 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 12.5.2025 </div>
+<div class="nadpis">Úterý 13.5.2025 </div>
 <ul>
 <span class="popup-gallery"><li class="polevka">
-<div class="polozka">Mrkvový krém s chilli</div>
+<div class="polozka">Bramboračka</div>
 <div class="cena">45 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hot dog s trhaným masem</div>
+<div class="polozka"><span class="poradi">1. </span>300g srbské rizoto sypané sýrem, kyselá okurka</div>
 <div class="cena">150 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kotleta s pepřovou omáčkou, pečené brambory</div>
-<div class="cena">150 Kč</div>
+<div class="polozka"><span class="poradi">2. </span>150g hovězí po burgundsku, bramborová kaše</div>
+<div class="cena">170 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>250g Zeleninový salát s grilovaným hermelínem</div>
-<div class="cena">150 Kč</div>
+<div class="polozka"><span class="poradi">3. </span>200g Rajčatový salát s rucolou a burattou</div>
+<div class="cena">160 Kč</div>
 <div class="clear"></div>
 </li>
 </span> </ul>
@@ -111,7 +106,7 @@
 <section id="Rybarna"></section><a href="#top">&#x1F51D;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Posirovany filet z norske tresky v koprove omacce, pecene brambory, salatek z cervene repy {L} 179</li><li>Peceny filet z cerstveho africkeho sumecka se salsou z cerstvych rajcat a bylinek, pecene brambory, salatek z cervene repy 210</li><li>Dwaejigogi bokkeum – palive korejske veprove s gochujang, zazvorem, zelenou cibulkou a prazenym sezamem, jasminova ryze, salatek 179</li><li>Linguine se srncimi kulickami v rajcatove omacce z cerstvych rajcat s bazalkou a pazitkou {L} 210</li><li>Smazena indicka pakora s kvetakem a hraskem, salsa z cerstvych rajcat a bylinek, pohanka se smazenou cibulkou, korejsky mrkvovy salatek 175</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 175</li><li>Sasimi z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 210</li><li>Medailonky z krutich prsicek v citronove omacce po jihoindicku se zazvorem a kokosovym mlekem, jasminova ryze, salatek 175</li><li>Smazene rizecky z panenske svickove, lehky bramborovy salat se zelenou cibulkou, pazitkou a celozrnnou horcici, citron {L} 210</li><li>Maghrebska saksuka s pecenymi lilky, cuketami, rajcaty, sazenymi vejci a balkanskym syrem, lehky bramborovy salat se zelenou cibulkou, pazitkou a celozrnnou horcici 175</li></ol>
 </td>
 </tr>
 </table>
